# qontract-reconcile

./: .tool-versions  Makefile  pyproject.toml
tools/gitlab_housekeeping_perf_sim/: .gitignore  Makefile  README.md  design-plan.md  pyproject.toml  run_harness.py  run_standalone.py
tools/gitlab_housekeeping_perf_sim/gitlab_hk_sim/: __init__.py  __main__.py  cli.py  endpoints.py  gitlab_shapes.py  metrics.py  mutations.py  phase1.py  policies.py  report.py  scenario.py  server.py  state.py
tools/gitlab_housekeeping_perf_sim/reports/comparisons/: latest
tools/gitlab_housekeeping_perf_sim/reports/monte-carlo/: latest
tools/gitlab_housekeeping_perf_sim/scenarios/: clean-nonoverlap-phase1.yaml  external-target-advance.yaml  high-priority-arrival.yaml  large-mixed-queue-advanced.yaml  large-mixed-queue.yaml  long-running-ci.yaml  mvp-active-cap.yaml  overlap-conflict-phase1.yaml  top-k-favorable.yaml  top-k-poisoned-window.yaml
tools/gitlab_housekeeping_perf_sim/tests/: test_gitlab_shapes.py  test_metrics.py  test_mutations.py  test_phase1.py  test_state.py
tools/gitlab_housekeeping_perf_sim/ui/: index.html
